fix WordPress a:visited background-color bleeding into modal button

--- a/packages/frontend/src/style.css
+++ b/packages/frontend/src/style.css
@@ -22,5 +22,6 @@
 #aiesec-signup-form * {
   font-size: revert-layer;
   line-height: revert-layer;
+  background-color: revert-layer;
 }
 
